upgrade to 3.1.1